Use openjfx's javafx artifacts to get it working on Java 11.
There were references to logging classes that haven't been published.
The code lives in https://github.com/yawkat/logging, but without
artifacts it couldn't be used, so I changed it to use slf4j-simple
instead.